--- a/activehoneypot_web/web/myStyle.css
+++ b/activehoneypot_web/web/myStyle.css
@@ -6,7 +6,7 @@ html, body {
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white; 
+    background-color: gray; 
     font-size:20px;
 }
 
